--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <input type="text" id="serialNumber" placeholder="Enter serial number here..." />
         </div>
 
-        <button onclick="calculateHash()">Generate Registration Code</button>
+        <button onclick="registerDevice()">Generate Registration Code</button>
 
         <div id="result" class="result">
             <p>Please ask the customer to enter this 6-digit code into their device:</p>
@@ -116,7 +116,7 @@
     </div>
 
     <script>
-        async function calculateHash() {
+        async function registerDevice() {
             const serialNumber = document.getElementById('serialNumber').value.trim();
             const resultDiv = document.getElementById('result');
             const codeDisplay = document.getElementById('codeDisplay');
@@ -132,35 +132,26 @@
             }
 
             try {
-                // Calculate SHA-256 hash of the serial number
-                const encoder = new TextEncoder();
-                const data = encoder.encode(serialNumber);
-                const hashBuffer = await crypto.subtle.digest('SHA-256', data);
-
-                // Convert hash to hex string
-                const hashArray = Array.from(new Uint8Array(hashBuffer));
-                const hashHex = hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
-
-                // Get last 6 digits from the hash
-                const lastSixDigits = hashHex.replace(/[a-f]/g, '').slice(-6);
-
-                // If we don't have 6 digits, pad with zeros or use a different approach
-                let finalCode;
-                if (lastSixDigits.length >= 6) {
-                    finalCode = lastSixDigits.slice(-6);
-                } else {
-                    // Convert entire hash to a number and get last 6 digits
-                    const hashNumber = parseInt(hashHex.slice(-8), 16);
-                    finalCode = (hashNumber % 1000000).toString().padStart(6, '0');
+                const response = await fetch(`https://myedenlifefa.azurewebsites.net/api/registerDevice`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ deviceSerialNumber: serialNumber })
+                });
+                if (!response.ok) {
+                    throw new Error(response.message || 'Failed to register device.');
                 }
+                const data = await response.json();
+                const finalCode = data.message;
 
                 // Display the result
                 codeDisplay.textContent = finalCode;
                 resultDiv.style.display = 'block';
 
             } catch (error) {
-                showError('An error occurred while calculating the hash. Please try again.');
-                console.error('Hash calculation error:', error);
+                showError(error.message || 'An error occurred while registering the device.');
+                console.error('Device registration error:', error);
             }
         }
 
@@ -176,7 +167,7 @@
         // Allow pressing Enter to calculate hash
         document.getElementById('serialNumber').addEventListener('keypress', function (event) {
             if (event.key === 'Enter') {
-                calculateHash();
+                registerDevice();
             }
         });
 
